Updating project only with java 26 features